<resources>
    <string name="app_name">sibi</string>
    <string name="category_text">choose a category and date(or not, we can\'t force you)</string>
    <string name="purchase_text">what do you plan to purchase?</string>
    <string name="purchasedate_text">when do you want to purchase it?</string>
    <string name="cost_text">how much does it cost?</string>
    <string name="navdrawer_text1">Wishlist</string>
    <string name="navdrawer_text2">Manage Budgets</string>
    <string name="navdrawer_text3">Sign Out</string>
    <string name="wishlist_text1">You are behind in your savings. You need to save an extra $20 this month. This amount has automatically been added as an expense.</string>
    <string name="wishlist_text2">You are saving $200 per month for future purchases</string>
    <string name="show_drawer">Show Drawer</string>
    <string name="hide_drawer">Hide Drawer</string>
    <string name="saving_wishlist_text">You will need to save $%s each month. This amount will automatically be deducted from your budget as a savings transaction.</string>
    <string name="amount_text">%s</string>
    <string name="or_review_transactions">...or review transactions</string>
    <string name="plan_a_purchase">plan a purchase</string>
    <string name="add_an_expense">add an expense</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="spent">spent</string>
    <string name="available">available</string>
    <string name="spent_text">$%s\\nspent this month</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_to_sibi_you_need_an_account_to_use_this_app">Welcome to Sibi.\nYou need an account to use this app.\n\nIf you have already created an account, please enter your details here:</string>
    <string name="enter_name">enter name</string>
    <string name="edit_trans">edittrans</string>
    <string name="search">Search</string>
    <string name="backup_transactions">Backup Transactions</string>
    <string name="restore_transactions_from_backup_file">Restore Transactions from Backup File</string>
    <string name="sort">Sort...</string>
    <string name="most_recent">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="name">Name</string>
    <string name="increasing_amount">Increasing Amount</string>
    <string name="decreasing_amount">Decreasing Amount</string>
    <string name="select_color">Select Color</string>
    <string name="edit_category">Edit Category</string>
    <string name="see_videos">See Videos</string>
</resources>
