<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wishlist.view.AddToWishlistFragment">

    <TextView
        android:id="@+id/purchase_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/purchase_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/purchase_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchase_tv">

        <ImageView
            android:id="@+id/wishlist_iv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_launcher_background" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/purchase_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColorHint="@color/colorAccent"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/purchase_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="enter name"
                android:textColor="#000"
                android:textSize="24dp"
                tools:text="iPhone X" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/purchasedate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/purchasedate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchase_ll" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchasedate_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="select target date"
        android:textColorHint="@color/colorAccent"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchasedate_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/purchasedate_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/calendar"
            android:inputType="date"
            tools:text="December, 2018" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/cost_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/cost_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchasedate_til" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cost_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter amount"
        android:textColorHint="@color/colorAccent"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_tv">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="144dp"
            android:textColor="#000"
            android:textSize="24sp"
            tools:text="$900.00" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/finish_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        tools:text="@string/saving_wishlist_text" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/blank"
        android:drawableRight="@drawable/check"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
